--- a/package.json
+++ b/package.json
@@ -14,17 +14,12 @@
     "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-
-    "react-router-dom": "^7.6.0",
-    "styled-components": "^6.1.18",
-    "tailwindcss": "^4.1.5"
-
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.35",
